<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_large">

        <TextView
            android:id="@+id/tvScheduleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:text="@string/configurar_horario"
            android:textColor="@color/card_text"
            android:textSize="@dimen/text_size_xlarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTreatmentsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/especialidades"
            android:textColor="@color/card_text"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvScheduleTitle" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgTreatments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintTop_toBottomOf="@id/tvTreatmentsLabel" />

        <TextView
            android:id="@+id/tvWorkingDaysLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/dias_laborables"
            android:textColor="@color/card_text"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cgTreatments" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgWorkingDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintTop_toBottomOf="@id/tvWorkingDaysLabel">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMon"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_lun" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTue"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_mar" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipWed"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_mie" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipThu"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_jue" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFri"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_vie" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSat"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_sab" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSun"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_dom" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tvTimeRangeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/rango_horario"
            android:textColor="@color/card_text"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cgWorkingDays" />

        <LinearLayout
            android:id="@+id/llTimeRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tvTimeRangeLabel">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilStartTime"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/inicio">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    tools:text="09:00" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="@dimen/spacing_medium"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEndTime"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/fin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    tools:text="21:00" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvDurationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/duracion_sesion"
            android:textColor="@color/card_text"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llTimeRange" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintTop_toBottomOf="@id/tvDurationLabel"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip30min"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duracion_30_min" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip45min"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duracion_45_min" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip60min"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/duracion_60_min" />
        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/btnSaveSchedule"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:backgroundTint="@color/azul"
            android:text="@string/guardar_horario"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintTop_toBottomOf="@id/cgDuration" />

        <ProgressBar
            android:id="@+id/pbSaving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
